# Resume_Claude_SDK_Agent

./: .env.example  .gitignore  .markdownlint.json  README.md  app.py  pyproject.toml  resume_generator.py  tools.py
archive/: resume_ale_V1.yaml
data/: personalities_16.md  portfolio_projects.md  resume_ale.md  resume_ale.yaml
docs/: Documentation.md  JSON_Parse_Error.md  notes.md
notebooks/: get_snapshot_brighdata.ipynb  query_vector_store.ipynb
output/: Alejandro_Leiva_Data_Analyst_Chord_2025_11_22.docx
scripts/: convert_yaml_to_md.py  create_embeddings.py
src/agent/: tools.py
src/core/: embeddings.py  resume_generator.py  vector_store.py
src/integrations/: brightdata.py
vector_db/qdrant_storage/: meta.json
vector_db/qdrant_storage/collection/personality/: storage.sqlite
vector_db/qdrant_storage/collection/projects/: storage.sqlite
vector_db/qdrant_storage/collection/resume_data/: storage.sqlite
